<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhistleBlower</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="prompt_select_type">Choose a Type</string>
    <string name="prompt_select_sub_type">Choose a Sub Type</string>
    <string name="message_box_hint">Describe Your Situation</string>
    <string name="category_physical_title">Physical</string>
    <string name="category_verbal_title">Verbal</string>
    <string name="post_current_location">Use Current Location</string>
    <string name="post_message_button">Send</string>
    <string name="msg_firstLine">Msg First Line</string>
    <string name="msg_secondLine">Msg Second Line</string>
    <string name="messageText">Message</string>
    <string name="category">Category</string>
    <string name="timestamp">2014/11/11 00:00</string>
    <string name="type">Type</string>

    <string-array name="harassment_type_array">
        <item>Racism</item>
        <item>Sexism</item>
    </string-array>
    <string-array name="racism_subType_array">
        <item>Caucasian</item>
        <item>African</item>
        <item>Asian</item>
        <item>Latino</item>
        <item>Native American</item>
        <item>Dornish</item>
        <item>Wookiee</item>
    </string-array>
    <string-array name="sexism_subType_array">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        <item>Androgyne</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_analysis">AnalysisActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_feeds">FeedsActivity</string>

</resources>
